--- a/public/index.css
+++ b/public/index.css
@@ -7,7 +7,7 @@
   html {
     background: #3ea2ef;
     color: rgb(255, 255, 255);
-    background-image: url("../Images/background/3632097.jpg");
+    background-image: url("./BackGround.jpg");
     background-repeat: no-repeat;
     background-position-y: -1240px;
   }
